完善了web端权限控制，分用户来管理不同环境的配置，全局用户admin,引入开发、测试、运维等角色用户，支持配置内容加密存储，防止拖库风险

--- a/disconf-web/pom.xml
+++ b/disconf-web/pom.xml
@@ -398,6 +398,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+				          <compilerArguments><bootclasspath>${java.home}/lib/rt.jar:${java.home}/lib/jce.jar</bootclasspath></compilerArguments>
+				        </configuration>
                     </plugin>
 
                     <plugin>
